# soccer-ai-vision

./: .gitignore  README.md  main.py  modal_runner.py  predict_pitch_pose_realtime.py  predict_pitch_realtime.py  pyproject.toml  realtime.py
auto_game_dls/: README.md  predict_realtime.py
auto_game_dls/soccer_ai/: __init__.py
conf/: config.yaml
conf/pipeline/: annotate.yaml  detect.yaml  filter.yaml  pitch.yaml  reid.yaml  team.yaml  track.yaml
docs/samples/: player_stats.json
research/results/detection_baseline/train/: args.yaml  results.csv
research/results/detection_soccernet/soccernet_yolo11_detect5/: args.yaml  results.csv
research/results/detection_soccernet/train/: args.yaml  results.csv
research/results/detection_soccernet/train-2/: args.yaml  results.csv
research/results/pose_keypoint/train/: args.yaml  results.csv
research/training/detection/: finetune_soccernet.py  role_detection.ipynb  soccer_detect.yaml  soccer_lines.yaml
research/training/detection/logs/: slurm-train_3-71031.err
research/training/pitch/: pitch_detection.ipynb  train_pitch_keypoint_detector.ipynb
research/training/reid/: train_reid.py
research/training/reid/osnet_reid/: .isort.cfg  README.md  (+3 more)
soccer_ai/: calibration.py  detector.py  download_data.py  minimap_mask.py  osnet.py  pipeline.py  reid.py  stats.py  visualizer.py
soccer_ai/nbjw/: __init__.py
temp_docx_generate/: build_c4.py  chuong1_tong_quan.md  chuong2_23_24_25.md  chuong2_co_so_ly_thuyet.md  chuong3_thiet_ke_he_thong.md  chuong4_thuc_nghiem.md  chuong5_ket_luan.md  mo_dau.md  overview.md  readme.md
(+39 files in other folders)
