[project]
name = "soccer-ai"
version = "0.1.0"
description = "Soccer AI video analysis pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gdown>=5.2.1",
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "ultralytics>=8.0.0",
    "opencv-python>=4.8.0",
    "sports",
    "supervision>=0.23.0",
    "tqdm>=4.66.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "Pillow>=10.0.0",
    "pyyaml>=6.0",
    "scipy>=1.11.0",
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
sports = { git = "https://github.com/roboflow/sports.git" }
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }

[project.optional-dependencies]
modal = ["modal>=0.73.0"]

[project.scripts]
download-data = "soccer_ai.download_data:main"
download-runs = "soccer_ai.download_data:download_runs"
